Fix the archive page on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,6 +76,13 @@ a {
   gap: 20px;
   margin-bottom: 15px;
 
+  @media(max-width: 767px) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    margin-bottom: 35px;
+  }
+
   .post-date {
     font-size: .9em;
     opacity: .9;
